package main.java.helpers;

public interface PairFunction<T> {
    void execute(T a, T b);
}
